# Change log of odenwlan-node

## v1.2.0
* New function: Auto update

## v1.1.2
* Fixed a malfunction in dns lookup of the request module

## v1.1.1
* Fixed an uncatchable error about dns lookup

## v1.1.0
* New function: Login manually when the tray icon was clicked
* Reduced archive size
* Improved retry processing
* Improved status check process

## v1.0.0
* First version